up file create rectange use object

--- a/rectangle-object.html
+++ b/rectangle-object.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
-<body>
-<canvas id="myCanvas" height="768" width="1368" style="border:1px solid #d3d3d3;"></canvas>
-<script src="main.js"></script>
 </head>
+<body>
+<canvas id="myCanvas" height="300" width="300" style="border:1px solid #d3d3d3;"></canvas>
+<p id="area"></p>
+<p id="perimeter"></p>
+<script src="main.js"></script>
+
 </body>
 </html>
